--- a/sample.env
+++ b/sample.env
@@ -1,9 +1,9 @@
-API_ID=12334
-API_HASH=
-TOKEN=
-OWNER_ID=5938660179
-OWNER_USERNAME=Abishnoi1M
-SUPPORT_CHAT=AbishnoiMF
-EVENT_LOGS=-1001573019550
-MONGO_DB_URI=
-DATABASE_URL=
+API_ID=20570663
+API_HASH=209c97b1090c80f24eaf6b0ef880d088
+TOKEN=5681953917:AAEO0t9w5fWwsh28mTc-u6PIvAPVX6h8GBg
+OWNER_ID=1488316798
+OWNER_USERNAME=xenxd
+SUPPORT_CHAT=weebs_support
+EVENT_LOGS=1001868871195
+MONGO_DB_URI=mongodb+srv://Wednesday:Wednesday@wednesday.hxuepne.mongodb.net/?retryWrites=true&w=majority
+DATABASE_URL=postgres://zpcqbgir:O2jmopwyI1B3agA9qt-pWhsZH4Or3xaa@satao.db.elephantsql.com/zpcqbgir
